--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,4 +1,8 @@
 $bg-color: #f0f6ff;
 $nav-bg-color: white;
 $btn-contact-border-color: #7e47ed;
-$font-dark-blue: rgb(10,5,53);
+$font-dark-blue: rgb(10, 5, 53);
+$story-bg-color: #110f27;
+$story-default-font-color:#F0ECFF;
+$about-font-body:#4A5A83;
+$btn-box-shadow:#7e47ed62;
