--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -7,6 +7,9 @@
 @import "../Components/Nav/nav";
 @import "../Pages/Home/home";
 @import "../Components/Layout/layout";
+@import '../Pages/About/about';
+@import '../Pages/Skills/skills';
+@import '../Components/SkillTag/skillTag';
 
 body {
   overscroll-behavior-y: none;
