--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -3,6 +3,11 @@ $nav-bg-color: white;
 $btn-contact-border-color: #7e47ed;
 $font-dark-blue: rgb(10, 5, 53);
 $story-bg-color: #110f27;
-$story-default-font-color:#F0ECFF;
-$about-font-body:#4A5A83;
-$btn-box-shadow:#7e47ed62;
+$story-default-font-color: #f0ecff;
+$about-font-body: #4a5a83;
+$btn-box-shadow: #7e47ed62;
+$about-bg-color: #0d0029;
+$about-light-color: #f0ebff;
+$heading-font-color: #2d3958;
+$trusted-body-font-color: #667394;
+$social-media-bg-colog: #ffe5ed;
