--- a/src/Components/SkillTag/_skillTag.scss
+++ b/src/Components/SkillTag/_skillTag.scss
@@ -1,13 +1,14 @@
 .skill__tag {
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px 20px;
-  background-color: $btn-box-shadow;
+  background-color: white;
   border-radius: 20px;
   margin: 2px 2px;
-  color: white;
+
 }
 
 .allTags {
+    color: $about-font-body;
   margin-top: 30px;
   max-width: 600px;
   display: flex;
