--- a/src/Pages/Home/_home.scss
+++ b/src/Pages/Home/_home.scss
@@ -30,7 +30,7 @@
   display: flex;
   font-size: 50px;
   margin: auto;
-  color: $font-dark-blue;
+  color: $heading-font-color;
 }
 
 .I {
@@ -105,4 +105,11 @@ object {
   .btn--skills {
     width: 80%;
   }
+}
+
+.blur-banner {
+  background-color: rgba(255, 255, 255, 0.418);
+  height: 50px;
+  width: 100%;
+  backdrop-filter: blur(30px);
 }
