--- a/src/Components/Nav/_nav.scss
+++ b/src/Components/Nav/_nav.scss
@@ -24,7 +24,10 @@
     color: rgb(110, 109, 109);
     height: 80%;
     align-items: center;
-
+    & > a {
+      height: 100%;
+      margin: 0px 30px;
+    }
     & > li {
       margin: 0px 30px;
     }
@@ -87,4 +90,12 @@
     transform: scale(1.02);
     box-shadow: rgba(149, 157, 165, 0.2) 5px 10px 18px;
   }
+}
+
+.links {
+  text-decoration: none;
+  color: $trusted-body-font-color;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 200ms ease-in-out;
+  height: 100%;
 }
