--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -20,6 +20,8 @@
 @import "../Sections/Footer/footer";
 @import "../Components/SocialMedia/socialMedia";
 @import "../Components/ContactForm/contactForm";
+@import '../Components/Nav/ResponsiveNav/responsiveNav';
+
 
 body {
   overscroll-behavior-y: none;
