--- a/src/Sections/Footer/_footer.scss
+++ b/src/Sections/Footer/_footer.scss
@@ -20,7 +20,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
   }
-  &__social-media{
+  &__social-media {
     display: flex;
   }
   &__left {
@@ -63,4 +63,20 @@
 .footer__right__top {
   display: flex;
   align-items: center;
+}
+
+@media (max-width: 824px) {
+  .footer__columns {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__left:nth-child(1) {
+    align-items: center;
+
+    margin-bottom: 40px;
+  }
+  .footer__right{
+      justify-content: center;
+      align-items: center;
+  }
 }
