--- a/src/Pages/Experience/_experience.scss
+++ b/src/Pages/Experience/_experience.scss
@@ -3,7 +3,7 @@
   justify-content: space-evenly;
   min-height: 90vh;
   align-items: center;
-  background-color: $bg-color;
+  background-color: white;
   padding: 40px;
   &__right {
   }
