--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -11,3 +11,4 @@ $about-light-color: #f0ebff;
 $heading-font-color: #2d3958;
 $trusted-body-font-color: #667394;
 $social-media-bg-colog: #ffe5ed;
+$font-blue:rgb(13, 0, 129);
