Removed un used text and fixed years of experience bug

--- a/src/Components/Nav/_nav.scss
+++ b/src/Components/Nav/_nav.scss
@@ -100,6 +100,11 @@
   height: 100%;
 }
 
-.links-custom{
+.logo-font {
+  text-decoration: none;
+  color: $heading-font-color;
+}
+
+.links-custom {
   text-decoration: none;
 }
