--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -26,7 +26,7 @@
 @import "../Pages/Contact/contact";
 
 html {
-  min-height: calc(100% + env(safe-area-inset-top));
+  min-height: -webkit-fill-available;
   padding: env(safe-area-inset-top) env(safe-area-inset-right)
     env(safe-area-inset-bottom) env(safe-area-inset-left);
 }
